src/NKnife.TDMS/Externals/nilibddc.h

   typedef DDCChannel*               DDCChannelHandle;
   typedef enum {
      DDC_UInt8 = 5,   // unsigned char
      DDC_Int16 = 2,   // short
      DDC_Int32 = 3,   // int
      DDC_Float = 9,   // float
      DDC_Double = 10,   // double
      DDC_String = 23,   // string
      DDC_Timestamp = 30,   // timestamp (Year/Month/Day/Hour/Minute/Second/Millisecond components)
   } DDCDataType;
   //*****************************************************************************
   /// <- Channel Group
   //*****************************************************************************

   //*****************************************************************************
   /// -> Channel
   //*****************************************************************************
   int __cdecl DDC_SetChannelProperty(DDCChannelHandle channel,
      const char *property,
      ...);
   int __stdcall DDC_SetChannelPropertyTimestampComponents(DDCChannelHandle channel,
      const char *property,
      unsigned int year,
      unsigned int month,
      unsigned int day,
      unsigned int hour,
      unsigned int minute,
      unsigned int second,
      double milliSecond);
   int __stdcall DDC_SetChannelPropertyV(DDCChannelHandle channel,
      const char *property,
      va_list args);
   int __stdcall DDC_GetChannelProperty(DDCChannelHandle channel,
      const char *property,
      void *value,
      size_t valueSizeInBytes);
   int __stdcall DDC_GetChannelPropertyTimestampComponents(DDCChannelHandle channel,
      const char *property,
      unsigned int *year,
      unsigned int *month,
      unsigned int *day,
      unsigned int *hour,
      unsigned int *minute,
      unsigned int *second,
      double *milliSecond,
      unsigned int *weekDay);
   int __stdcall DDC_GetChannelStringPropertyLength(DDCChannelHandle channel,
      const char *property,
      unsigned int *length);
   int __cdecl DDC_CreateChannelProperty(DDCChannelHandle channel,
      const char *property,
      DDCDataType dataType,
      ...);
   int __stdcall DDC_CreateChannelPropertyTimestampComponents(DDCChannelHandle channel,
      const char *property,
      unsigned int year,
      unsigned int month,
      unsigned int day,
      unsigned int hour,
      unsigned int minute,
      unsigned int second,
      double milliSecond);
   int __stdcall DDC_CreateChannelPropertyV(DDCChannelHandle channel,
      const char *property,
      DDCDataType dataType,
      va_list args);
   int __stdcall DDC_ChannelPropertyExists(DDCChannelHandle channel,
      const char *property,
      int *exists);
   int __stdcall DDC_GetNumChannelProperties(DDCChannelHandle channel,
      unsigned int *numProperties);
   int __stdcall DDC_GetChannelPropertyNames(DDCChannelHandle channel,
      char** propertyNames,
      size_t numPropertyNames);
   int __stdcall DDC_GetChannelPropertyType(DDCChannelHandle channel,
      const char *property,
      DDCDataType *dataType);